--- a/index.html
+++ b/index.html
@@ -5,94 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project I : Web Portfolio 060 Atsadawut</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.9.0/css/foundation-float.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/fontawesome.min.css">
 </head>
 <body>
     <header>
-        <div class="container">
-            <img class="logo" src="https://scontent.furt3-1.fna.fbcdn.net/v/t39.30808-1/451351985_1636110373599519_6999807592954446378_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=109&ccb=1-7&_nc_sid=50d2ac&_nc_eui2=AeHEnB0wP3z2XQbmFIpHuUdDk4iQM_FbD72TiJAz8VsPvfEubuEWDudEOhDmjbC76FsGaWcuvmulcqSxeHQloGSi&_nc_ohc=9_Ox-CyrWi8Q7kNvgEuioty&_nc_oc=AdiJpz8POBQ6cXbw464hqLPeFHCVUw5DwQU8Pl09dy3iToxdOOOHpEvro0Ly-XF0LyxDjjiqVYkaU-l--huOXD79&_nc_zt=24&_nc_ht=scontent.furt3-1.fna&_nc_gid=ActMWOoqafH8Lq1DJc981bM&oh=00_AYDVdmxLvxRm1aKN9aWfyUddkU6jAyC72RiMb6PdVTlmMg&oe=67678E69" alt="">
-            <h1 class="name">Asadawut Khunthong</h1>
-            <span class="slogan"> อัศวินไม่อินกับการนอน</span>
-            <div class="social-img"> 
-                <ul>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-github"></i>
-
-                </ul>
+        <div class="container profile">
+            <div class="info">
+                <h1 class="name">Asadawut Khunthong</h1>
+                <span class="slogan">อัศวินไม่อินกับการนอน</span>
+                <div class="social-img">
+                    <ul>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-github"></i>
+                    </ul>
+                </div>
+                <p class="bio">
+                    html คืออะไรครับจาก
+                    เเล้ว css มันคืออะไรอีกครับบบ
+                </p>
             </div>
-            <p class="bio">
-                html คืออะไรครับจาก
-                เเล้ว css มันคืออะไรอีกครับบบ
-            </p>
-            <h5>Portfolio</h5>
-            <hr>
-            <div class="row">
-                <div class="small-6 columns">
-                    <div class="work">
-                        <a href="Excerises/ex1menu.html">
-                            <img src="/Excerises/images/pic1.jpg" alt="Image 1">
-                            <div class="label">Menu</div>
-                        </a>
-                    </div>
-                </div>
-                <div class="small-6 columns">
-                    <div class="work">
-                        <a href="Excerises/ex2Form.html">
-                            <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 2">
-                            <div class="label">Form</div>
-                        </a>
-                    </div>
-                </div>
-                <div class="small-6 columns">
-                    <div class="work">
-                        <a href="Excerises/ex3Box_Model.html">
-                            <img src="http://www.htmlandcssbook.com/code-samples/chapter-13/images/keys.jpg" alt="Image 2">
-                            <div class="label">Form</div>
-                        </a>
-                    </div>
-                </div>
-                <div class="small-6 columns">
-                    <div class="work">
-                        <a href="https://cznull.github.io/vsbm">
-                            <img src="http://www.htmlandcssbook.com/code-samples/chapter-13/images/keys.jpg" alt="Image 2">
-                            <div class="label">Form</div>
-                        </a>
-                    </div>
-                </div>
-                <div class="small-6 columns">
-                    <div class="work">
-                        <a href="/Excerises/ex4menubuty.html">
-                            <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 2">
-                            <div class="label">Form</div>
-                        </a>
-                    </div>
-                </div>
+            <div class="image-container">
+                <img class="logo" src="/Excerises/images/picpro.jpg" alt="Profile Picture">
             </div>
-            <h5>contact me</h5>
-            <hr>
-            <form action="">
-                <div class="row">
-                    <div class="medium-6 columns">
-                        <label for="name">Your Name
-                            <input type="text" id="name" placeholder="Your name">
-                        </label>
-                    </div>
-                    <div class="medium-6 columns">
-                        <label for="email">Email
-                            <input type="email" id="email" placeholder="Your email">
-                        </label>
-                    </div>
-                    <div class="medium-12 columns">
-                        <label for="message">Message
-                            <textarea id="message" placeholder="Your message" rows="4" cols="50"></textarea>
-                        </label>
-                        <button class="button">Send</button>
-                    </div>
-                </div>
-            </form>
+        </div>
+            
+        <h3 class="Portfolio">Portfolio</h3>
+<hr>
+<div class="portfolio-grid">
+    <div class="work">
+        <a href="Excerises/ex1menu.html">
+            <img src="/Excerises/images/pic1.jpg" alt="Image 1">
+            <button class="btn btn-primary1">เมนูอาหาร (basic html)</button>
+        </a>
+    </div>
+    <div class="work">
+        <a href="Excerises/ex2Form.html">
+            <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 2">
+            <button class="btn btn-primary2">ฟอร์มศิษย์เก่า (Form)</button>
+        </a>
+    </div>
+    <div class="work">
+        <a href="Excerises/ex3Box_Model.html">
+            <img src="http://www.htmlandcssbook.com/code-samples/chapter-13/images/keys.jpg" alt="Image 3">
+            <button class="btn btn-primary3">ร้านอุปกรณ์ดนตรี (Box Model)</button>
+        </a>
+    </div>
+    <div class="work">
+        <a href="/Excerises/ex4menubuty.html">
+            <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 4">
+            <button class="btn btn-primary4">เมนูอาหารสวยงาม (Page layout)</button>
+        </a>
+    </div>
+</div>
+<h5>Contact me</h5>
+<hr>
+<form action="" class="contact-form">
+    <div class="form-group">
+        <label for="name">Your Name</label>
+        <input type="text" id="name" placeholder="Your name">
+    </div>
+    <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" placeholder="Your email">
+    </div>
+    <div class="form-group">
+        <label for="message">Message</label>
+        <textarea id="message" placeholder="Your message" rows="4"></textarea>
+    </div>
+    <button class="button">Send</button>
+</form>
         </div>
     </header>
 </body>
