--- a/Excerises/ex3Box_Model.html
+++ b/Excerises/ex3Box_Model.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Boxes</title>
-    <link rel="stylesheet"  href="/Excerises/css/style.css">
+		<link rel="stylesheet" href="https://raw.githubusercontent.com/atsadawut060/Excerises/main/css/style.css">
 		</style>
 	</head>
 	<body>
