--- a/Excerises/ex3Box_Model.html
+++ b/Excerises/ex3Box_Model.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Boxes</title>
 		
-    <link rel="stylesheet"  href="/Excerises/css/style.css">
+    <link rel="stylesheet"  href="style.css">
 		</style>
 	</head>
 	<body>
