--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </a>
     </div>
     <div class="work">
-        <a href="/Excerises/ex4menubuty.html">
+        <a href="Excerises/ex4menubuty.html">
             <img src="https://images.unsplash.com/photo-1501504905252-473c47e087f8?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image 4">
             <button class="btn btn-primary4">เมนูอาหารสวยงาม (Page layout)</button>
         </a>
