--- a/Excerises/ex2Form.html
+++ b/Excerises/ex2Form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>แบบฟอร์มรับสมัครศิษย์เก่า IT + IS</title>
-    <link rel="stylesheet" href="/Excerises/style3.css">
+    <link rel="stylesheet" href="style3.css">
 </head>
 <body>
     <form action="https://exleple.com "></form>
