--- a/Excerises/ex1menu.html
+++ b/Excerises/ex1menu.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>ต้มยำกุ้งน้ำข้น</h1>
-    <img src="/Excerises/images/pic5.jpg  " alt="ต้มยำกุ้งน้ำข้น" width="500px"> 
+    <img src="https://d3h1lg3ksw6i6b.cloudfront.net/media/image/2023/04/24/5608757681874e1ea5df1aa41d5b2e3d_How_To_Make_Tom_Yam_Kung_The_Epitome_Of_Delicious_And_Nutritious_Thai_Cuisine3.jpg  " alt="ต้มยำกุ้งน้ำข้น" width="500px"> 
     <h2>วัตถุดิบ</h2>
     <ol>
         <li>กุ้งขนาดแล้วแต่ชอบ 6 ขีด</li>
