--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="portfolio-grid">
     <div class="work">
         <a href="Excerises/ex1menu.html">
-            <img src="/Excerises/images/pic1.jpg" alt="Image 1">
+            <img src="https://d3h1lg3ksw6i6b.cloudfront.net/media/image/2023/04/24/5608757681874e1ea5df1aa41d5b2e3d_How_To_Make_Tom_Yam_Kung_The_Epitome_Of_Delicious_And_Nutritious_Thai_Cuisine3.jpg" alt="Image 1">
             <button class="btn btn-primary1">เมนูอาหาร (basic html)</button>
         </a>
     </div>
