--- a/Excerises/ex1menu.html
+++ b/Excerises/ex1menu.html
@@ -26,10 +26,10 @@
 
     <h2>วิธีการทำ</h2>
     <h3>STEP 1 : นำกุ้งมาปลอกเปลือกและผ่าหลังเอาเส้นดำๆออก</h3>
-    <img src="/Excerises/images/pic6.jpg" alt="วรธีทำ" width="300px">
+    <img src="https://f.ptcdn.info/474/080/000/rturhkbaucmcjPSJJF2E-o.jpg" alt="วรธีทำ" width="300px">
 
     <h3>STEP 2 :ทำราดหน้าหมูนุ่ม</h3>
-    <img src="/Excerises/images/pic7.jpg" alt="เครื่องปรุง" width="300px">
+    <img src="https://scontent.furt3-1.fna.fbcdn.net/v/t1.6435-9/88056606_1473343682846208_6111970502111133696_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=127cfc&_nc_ohc=BZ0ENKyoOI0Q7kNvgHYoSKx&_nc_oc=Adiu83bMTa5RxOlsk6Wm-7ZTlZFNRVYFyXE-GM52Yo93s8oHHYpin2YTyK0ZnS-kMXpwSORsyMbg_wVzz8H5R-Ga&_nc_zt=23&_nc_ht=scontent.furt3-1.fna&_nc_gid=A5LXOP1hUSufOGhokyEl4lV&oh=00_AYClcMBhb4wCxkf02AF61Bq5SZXDn5WHvFHv2ci1vIWgSQ&oe=67A8BB2A" alt="เครื่องปรุง" width="300px">
     <ol>
         <li>เอาข่า ตะไคร้ ใบมะกรูดมาล้างให้สะอาด แล้วหั่นเตรียมไว้</li>
         <li>ปลอกหอมแดงแล้วนำมาล้างให้สะอาด แล้วนำไปทุบให้แตกเล็กน้อย</li>
@@ -39,10 +39,10 @@
     </ol>
 
     <h3>STEP 3 : น้ำ 400 ml ตั้งไฟให้เดือดจากนั่นใส่ ข่า ตะไคร้ ใบมะกูด หอมแดง ต้มสักพักแล้วแล้วใส่เห็ดลงไป พอเดือดตามด้วยกุ้ง</h3>
-    <img src="/Excerises/images/pic8.jpg" alt="เครื่องปรุง" width="300px">
+    <img src="https://scontent.furt3-1.fna.fbcdn.net/v/t1.6435-9/88135314_1473343736179536_2040112923048673280_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=jTB-J9QG-1kQ7kNvgFZ6trA&_nc_oc=AdhttDvFsnU6St_su-21ryyMcGXLEwbz9hiOY58VGPRct9IoYb74mpAPrQ0ViYkZUHPL5C_p1sduB8V8BYKftJVi&_nc_zt=23&_nc_ht=scontent.furt3-1.fna&_nc_gid=A9jWcVUamyQQP-DuRLttFYw&oh=00_AYAStFAznWMiqeZ9t3hfSecZIlLohuI_CNCBNAc7G6X9yg&oe=67A8B95B" alt="เครื่องปรุง" width="300px">
 
     <h3>STEP 4 : กุ้งเริ่มออกสีแดงก้อเริ่มปรุงรสกันเลย</h3>
-    <img src="/Excerises/images/pic9.jpg" alt="เครื่องปรุง" width="300px">
+    <img src="https://s359.kapook.com/r/580/435/pagebuilder/efe4311c-7c2c-4387-8503-fa06d6bdc6ad.jpg" alt="เครื่องปรุง" width="300px">
     <ol>
         <li>ใส่น้ำพริกเผา 1 ช้อน</li>
         <li>ใส่นมสด 7 ช้อน</li>
