--- a/Excerises/ex2Form.html
+++ b/Excerises/ex2Form.html
@@ -69,7 +69,7 @@
         <!-- รูปถ่าย -->
         <label for="photo">อัปโหลดรูปถ่าย:</label>
         <input type="file" id="photo" name="photo" accept="image/*" required><br><br>
-        <img src="https://imgur.com/a/me-bWqkaql" alt="">
+        <img src="https://i.imgur.com/btwfDYF.png" alt="">
         <button type="submit">ส่งข้อมูล</button>
     </form>
 </body>
