--- a/Excerises/ex4menubuty.html
+++ b/Excerises/ex4menubuty.html
@@ -11,14 +11,13 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="https://d3h1lg3ksw6i6b.cloudfront.net/media/image/2023/04/24/5608757681874e1ea5df1aa41d5b2e3d_How_To_Make_Tom_Yam_Kung_The_Epitome_Of_Delicious_And_Nutritious_Thai_Cuisine3.jpg" alt="French Toast">
+        <img src="/Excerises/images/pic5.jpg" alt="French Toast">
     </div>
     <div class="container">
         <header>
             <h1>ต้มยำกุ้งน้ำข้น</h1>
             <p class="subtitle">เมนูอาหารไทยสุดคลาสสิก รสชาติจัดจ้าน หอมกลิ่นสมุนไพร</p>
         </header>
-        <!-- Ingredients Section -->
         <section class="ingredients">
             <h2>ส่วนผสม</h2>
             <table>
@@ -61,34 +60,30 @@
                 
             </table>
         </section>
-
-        <!-- Instructions Section -->
         <section class="instructions">
             <h2>วิธีทำ</h2>
             <ol>
                 <li>
                     <p>นำกุ้งมาปลอกเปลือกและผ่าหลังเอาเส้นดำออก</p>
                     <p class="tip">** เคล็ดลับ: หากต้องการให้กุ้งกรอบ แช่ในน้ำเย็นจัดก่อนใช้ **</p>
-                    <img src="/Excerises/images/pic6.jpg" alt="">
+                    <img src="https://f.ptcdn.info/474/080/000/rturhkbaucmcjPSJJF2E-o.jpg" alt="การปลอกเปลือกกุ้ง">
                 </li>
                 <li>
                     <p>เตรียมข่า ตะไคร้ ใบมะกรูด หอมแดง และพริก ต้มในน้ำเดือด 400 ml.</p>
                     <p class="tip">** เคล็ดลับ: ทุบสมุนไพรเล็กน้อยเพื่อให้น้ำซุปหอมขึ้น **</p>
-                    <img src="" alt="">
+                    <img src="https://scontent.furt3-1.fna.fbcdn.net/v/t1.6435-9/88056606_1473343682846208_6111970502111133696_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=127cfc&_nc_ohc=BZ0ENKyoOI0Q7kNvgHYoSKx&_nc_oc=Adiu83bMTa5RxOlsk6Wm-7ZTlZFNRVYFyXE-GM52Yo93s8oHHYpin2YTyK0ZnS-kMXpwSORsyMbg_wVzz8H5R-Ga&_nc_zt=23&_nc_ht=scontent.furt3-1.fna&_nc_gid=A5LXOP1hUSufOGhokyEl4lV&oh=00_AYClcMBhb4wCxkf02AF61Bq5SZXDn5WHvFHv2ci1vIWgSQ&oe=67A8BB2A" alt="การเตรียมสมุนไพร">
                 </li>
                 <li>
                     <p>ใส่กุ้งและเห็ดลงไปในน้ำซุป ปรุงรสด้วยน้ำปลา น้ำมะนาว น้ำพริกเผา และพริกสด</p>
                     <p class="tip">** เคล็ดลับ: ชิมรสก่อนใส่มะนาวเพื่อปรับความเปรี้ยวตามชอบ **</p>
-                    <img src="" alt="">
+                    <img src="https://scontent.furt3-1.fna.fbcdn.net/v/t1.6435-9/88135314_1473343736179536_2040112923048673280_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=127cfc&_nc_ohc=jTB-J9QG-1kQ7kNvgFZ6trA&_nc_oc=AdhttDvFsnU6St_su-21ryyMcGXLEwbz9hiOY58VGPRct9IoYb74mpAPrQ0ViYkZUHPL5C_p1sduB8V8BYKftJVi&_nc_zt=23&_nc_ht=scontent.furt3-1.fna&_nc_gid=A9jWcVUamyQQP-DuRLttFYw&oh=00_AYAStFAznWMiqeZ9t3hfSecZIlLohuI_CNCBNAc7G6X9yg&oe=67A8B95B" alt="การปรุงรส">
                 </li>
                 <li>
                     <p>ตักเสิร์ฟในชาม โรยผักชีฝรั่งและพริกขี้หนูสด พร้อมเสิร์ฟ</p>
-                    <img src="" alt="">
+                    <img src="https://s359.kapook.com/r/580/435/pagebuilder/efe4311c-7c2c-4387-8503-fa06d6bdc6ad.jpg" alt="การเสิร์ฟ">
                 </li>
             </ol>
         </section>
-
-        <!-- Nutrition Table Section -->
         <section class="nutrition">
             <h2>ตารางสารอาหาร</h2>
             <table>
@@ -131,11 +126,17 @@
                 </tr>
             </table>
         </section>
-
-        <!-- Source Section -->
         <footer>
             <p>แหล่งที่มา: <a href="https://www.wongnai.com/recipes/ugc/06c21e83ed584ed4996a129af5c3231c" target="_blank">Wongnai</a></p>
         </footer>
+
+        <section class="comment-section">
+            <h2>ความคิดเห็น</h2>
+            <form class="comment-form">
+                <textarea name="comment" rows="4" placeholder="เขียนความคิดเห็นของคุณที่นี่..."></textarea>
+                <button type="submit">โพสต์ความคิดเห็น</button>
+            </form>
+        </section>
     </div>
 </body>
 </html>
