--- a/Excerises/ex4menubuty.html
+++ b/Excerises/ex4menubuty.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="/Excerises/images/pic5.jpg" alt="French Toast">
+        <img src="/Excerises/images/pic5.jpg" alt="น้ำท่อม">
     </div>
     <div class="container">
         <header>
