--- a/Excerises/ex4menubuty.html
+++ b/Excerises/ex4menubuty.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="image-container">
-        <img src="/Excerises/images/pic5.jpg" alt="น้ำท่อม">
+        <img src="https://d3h1lg3ksw6i6b.cloudfront.net/media/image/2023/04/24/5608757681874e1ea5df1aa41d5b2e3d_How_To_Make_Tom_Yam_Kung_The_Epitome_Of_Delicious_And_Nutritious_Thai_Cuisine3.jpg  " alt="น้ำท่อม">
     </div>
     <div class="container">
         <header>
